--- a/src/sass/tip.scss
+++ b/src/sass/tip.scss
@@ -46,59 +46,10 @@
     background: #fff;
   }
   text-align: center;
-  width: 1200px;
+  width: 93.75%;
   margin: 0 auto;
   margin-bottom: 65px;
   background: url(../images/common/tit_back_var.png) 0 -9px repeat-x;
-}
-}
-.tip1_wrap{
-  width: 960px;
-  margin: 0 auto;
-  iframe{
-    width: 485px;
-    height: 280px;
-  }
- ul{
-   span+ul{
-     position: absolute;
-     top: 200px;
-     left: 600px;
-     li{
-       margin: 0;
-       a{
-         float: left;
-         padding-right: 10px;
-       }
-     }
-   }
-   li{
-     position: relative;
-     width: 960px;
-     margin-bottom: 120px;
-     p{
-       a{
-         position: absolute;
-         top: 30px;
-         left: 600px;
-         color: #333333;
-         font-size: 24px;
-         font-weight: bold;
-       }
-     }
-     span{
-       a{
-         position: absolute;
-         top: 100px;
-         left: 600px;
-         display: block;
-         width: 320px;
-         color: #666666;
-         font-size: 14px;
-       }
-     }
-   }
- }
 }
 .more{
   a{
@@ -111,6 +62,86 @@
     text-align: center;
     line-height: 30px;
     margin: 0 auto;
-
   }
+}
+.tip1_wrap{
+  iframe{
+    width: 480px;
+    height: 280px;
+    float: left;
+    margin-right: 120px;
+  }
+  img{
+    float: left;
+    margin-right: 120px;
+  }
+  ul{
+  li{
+    overflow: hidden;
+    width: 75%;
+    margin: 0 auto;
+    padding-bottom: 120px;
+    h3{
+      padding-top: 30px;
+      padding-bottom: 50px;
+      a{
+        color: #333;
+        font-size: 24px;
+        font-weight: bold;
+      }
+      +p{
+        padding-bottom: 60px;
+        a{
+          color: #666666;
+          font-size: 14px;
+          font-weight: normal;
+        }
+        +p{
+          a{
+            +a{
+              &:hover, &:focus{
+              background: url(../images/tip/icon_interest_3_on.png) 0 0 no-repeat;
+              }
+              background: url(../images/tip/icon_interest_3.png) 0 0 no-repeat;
+            }
+            &:hover, &:focus{
+            background: url(../images/tip/icon_recom_2_on.png) 0 0 no-repeat;
+            }
+            text-indent: -9999px;
+            display: inline-block;
+            width: 60px;
+            height: 60px;
+            background: url(../images/tip/icon_recom_2.png) 0 0 no-repeat;
+          }
+        }
+      }
+    }
+   }
+  }
+}
+.tip2_wrap{
+  display: none;
+ul{
+  padding-left: 15px;
+  padding-right: 40px;
+  li{
+    margin-left: 25px;
+    margin-bottom: 50px;
+    float: left;
+    width: 21.99%;
+    a{
+      border: 1px solid #e5e5e5;
+      span{
+        display: inline-block;
+        padding: 15px 0;
+      }
+      text-align: center;
+      &:hover,&:focus{
+        border: 1px solid #6d9811;
+      }
+      display: block;
+    }
+   }
+  }
+ }
 }
