--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -32,91 +32,133 @@
   margin-top: -4px;
   }
  }
+ .bx-wrapper .bx-controls-direction{display: none;}
+ .bx-wrapper .bx-pager-link{background: url(../images/common/indi_v1.png) 0 9px no-repeat;
+ width: 26px; height: 31px; text-indent: -9999px; display: inline-block; float: left;
+ }
+ .bx-wrapper .bx-pager-link.active{background: url(../images/common/indi_v1_on.png) 0 9px no-repeat;}
+ .bx-wrapper .bx-stop{
+   background: url(../images/common/playpause.png) 0 -32px no-repeat;
+   width: 31px;
+   height: 31px;
+   text-indent: -9999px;
+   display: inline-block;
+   position: absolute;
+   top: 0;
+   right: 0;
+ }
+ .bx-wrapper .bx-start{
+   background: url(../images/common/playpause.png) 0 0 no-repeat;
+   width: 31px;
+   height: 31px;
+   text-indent: -9999px;
+   display: inline-block;
+   position: absolute;
+   top: 0;
+   right: 0;
+ }
+ .bx-wrapper .bx-start.active,.bx-wrapper .bx-stop.active{display: none;}
+ .bx-wrapper .bx-controls{
+   display: inline-block;
+   width: 135px;
+   position: absolute;
+   bottom: 4.28%;
+   left: 50%;
+   margin-left: -67.5px;
+   z-index: 100;
+ }
+ .bx-wrapper{position: relative;}
 }
 #container{
+  width: 100%;
+  padding: 0 35px;
+  margin: 0 auto;
+}
+.bestsell{
   margin-top: 50px;
-  ul{
-    padding-right: 45px;
-    padding-left: 35px;
-  }
   li{
-    position: relative;
-    width: 30%;
-    height: 490px;
-    background: #0c221c;
-    float: left;
     +li{
-      margin: 0 45px;
-      background: #7b704d;
-      +li{
-        margin: 0;
+      +li p{
         background: #0c221c;
       }
+      p{
+        background: #7b704d;
+      }
     }
+    padding: 0 15px; 
+    position: relative;
+    width: 33.3%;
+    height: 490px;
+    float: left;
     p{
+      height: 50%;
+      background: #0c221c;
       color: #fff;
       font-size: 22px;
-      padding-top: 80px;
       text-align: center;
-      padding-bottom: 50px;
-    }
-    a{
-      position: absolute;
-      bottom: 7.28%;
-      left: 50%;
-      margin-left: -65.5px;
-      display: block;
-      color: #fff;
-      border: 1px solid #fff;
-      width: 131px;
-      height: 31px;
-      text-align: center;
-      line-height: 28px;
-      font-size: 14px;
+      padding: 16.32% 20px 10.2% 20px;
+      a{
+        position: absolute;
+        bottom: 12%;
+        left: 50%;
+        margin-left: -65.5px;
+        display: block;
+        color: #fff;
+        border: 1px solid #fff;
+        width: 131px;
+        height: 31px;
+        text-align: center;
+        line-height: 28px;
+        font-size: 14px;
+      }
     }
   }
 }
 .ad{
-  padding-left: 35px;
-  padding-right: 45px;
   margin-top: 50px;
   .ad_left{
-    width: 55.46%;
+    width: 55%;
+    float: left;
+  }
+  .ad_right{
+    width: 45%;
     float: left;
   }
   .ad_movie{
-    width: 38.28%;
-    height: 270px;
     iframe{
-      border: 0;
+      height: 240px;
+      border: none;
       width: 100%;
-      height: 270px;
     }
-    float:left;
   }
-  .ad_news{  
+  .ad_news{
+    width: 100%;
+    margin-top: -4px;
+    p{
+      width: 50%;
+      float: right;
+    }
     ul{
-      position: relative;
       float: left;
-      width: 19.2%;
+      width: 50%;
       padding-left: 35px;
-      padding-right: 20px;
       padding-top: 28px;
       li{
         color: #422d22;
         font-size: 14px;
         font-weight: bold;
-        padding-bottom: 28px;
+        padding-bottom: 10px;
+        padding-right: 10px;
         +li{
           font-weight: normal;
           font-size: 16px;
           a{
             color: #333333;
           }
-          padding-bottom: 48px;
+          padding-bottom: 25px;
           +li{
             font-size: 12px;
-            padding-bottom: 28px;
+            padding-bottom: 20px;
             a{
               color: black;
               }
@@ -127,22 +169,20 @@
         }
       }
     }
-    p{
-      float: left;
-      width: 244px;
-    }
   }
 }
 .banner{
   margin-top: 50px;
-  padding-left: 35px;
   li{
     p{
+      width: 100%;
+      margin: 0 auto;
       text-align: center;
+      position: absolute;
+      top: 50%;
+      margin-top: -55.5px;
       color: #fff;
       font-size: 35px;
-      padding-top: 230px;
-      padding-bottom: 35px;
     }
     a{
       display: block;
@@ -154,17 +194,85 @@
       font-size: 14px;
       line-height: 28px;
       text-align: center;
+      margin-top: 35px;
     }
-    width: 599px;
-    height: 560px;
+    position: relative;
+    width: 50%;
     float: left;
-    background: url(../images/common/banner_1.png) 0 0 no-repeat;
-    +li{
-      width: 602px;
-      background: url(../images/common/banner_2.png) 0 0 no-repeat;
+  }
+}
+@media (max-width:1024px) {
+.bestsell{
+  ul{
+    li{
+      a{
+        bottom: 18%;
+      }
+      padding: 0;
+      width: 33.3%;
     }
   }
 }
-@media (max-width:1180px) {
-
+.ad_left,.ad_news{display: none}
+.ad_movie,.ad .ad_right{
+  width: 100%;
+  iframe{
+    height: 357px;
+  }
+}
+}
+@media (max-width:860px) {
+  .bestsell ul li{
+    +li{
+      img{float: right;}
+      p{float: left;}
+      background:#7b704d;
+      +li{
+        img{float: left;}
+        p{float: right;}
+        background:#0c221c;
+      }
+    }
+    background: #0c221c;
+    width: 100%;
+    height: inherit;
+    img{
+      width: 50%;
+      float: left;
+    }
+    p{
+      background: none;
+      padding: 8% 0 15% 0 ;
+      position: relative;
+      width: 50%;
+      float: left;
+      font-size: 18px;
+    }
+  }
+  .banner li{
+    width: 100%;
+    text-align: center;
+  }
+}
+@media (max-width:480px) {
+.slideBannerWrap p{display: none;}
+.bestsell ul li{
+  img{
+    width: 100%;
+  }
+  p{
+    a{display: none;}
+    padding: 20px;
+    position: relative;
+    width: 100%;
+    float: left;
+    font-size: 14px;
+  }
+}
+.ad .ad_right{
+  display: none;
+}
+.banner li{
+p{font-size: 30px;}
+}
 }
