--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -76,6 +76,12 @@ a{
   margin: 0 auto;
 }
 #header{
+  .menu_box_wrap{
+    display: none;
+  }
+  .menu_box{
+    display: none;
+  }
   position: relative;
   width: 100%;
   height: 150px;
@@ -120,7 +126,7 @@ a{
     }
   }
   .gnb1{
-    display: none;;
+    display: none;
     z-index: 1000;
     position: absolute;
     top: 84px;
@@ -299,11 +305,51 @@ a{
 }
 }
 @media (max-width:1024px) {
-#header .submenu,#header h1 .tit_1{
+#header .menu_box_wrap{
+    display: none;
+    background: white;
+    position: absolute;
+    top: 50px;
+    left: 0;
+    width: 240px;
+    height: 500px;
+    z-index: 5000;
+    text-align: center;
+    p{
+      color: #fff;
+      font-size: 16px;
+      font-weight: bold;
+      padding: 18px 0;
+      background: #3a322a;
+    }
+  p+ul{
+    li a{
+      display: block;
+      width: 240px;
+      font-size: 15px;
+      padding: 18px 0;
+      color: #fff;
+      background: #494037;
+    }
+  }
+}
+#header .submenu,#header h1 .tit_1,
+#header .menu .gnb2,#header .menu .gnb1,
+#header .menu{
   display: none;
 }
 #header{
   height: 50px;
+  .menu_box{
+    display: block;
+    width: 50px;
+    height: 50px;
+    text-indent: -9999px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background:url(../images/common/btn_aside_open.png) center no-repeat;
+  }
 }
 #header h1 .tit_2{
   display: block;
