--- a/src/sass/sns.scss
+++ b/src/sass/sns.scss
@@ -3,6 +3,7 @@
   display: block;
 }
 .sns_wrap{
+   padding: 0 40px;
     margin-top: 86px;
   h2{
     margin-bottom: 40px;
@@ -30,29 +31,32 @@
   background: url(../images/common/tit_back_var.png) 0 -6px repeat-x;
 }
 .sns_box{
-  padding-left: 7px;
-  padding-right: 40px;
   li{
+    padding: 0 15px;
+    margin-bottom: 60px;
+    float: left;
+    width: 25%;
     a{
+      display:-webkit-box;
+      -webkit-line-clamp:3;
+      -webkit-box-orient:vertical;
+      max-height:160px;
+      overflow:hidden;
+      height: 160px;
+      background: #f6f6f6;
       color: #333;
-      font-size: 18px;
+      padding: 55px 20px 0 20px;
+      font-size: 16px;
       text-align: center;
-      display: inline-block;
-      padding: 0 20px;
-      margin-top: 50px;
+      display: block;
       &:hover,&focus{
-        text-decoration: underline;
+        background: #729536;
+        color: #fff;
       }
     }
-    margin-bottom: 60px;
-    margin-left: 33px;
-    float: left;
-    width: 22.25%;
-    height: 330px;
-    background: #f6f6f6;
     p{
+      width: 100%;
       height: 170px;
-      background: #fff;
       text-align: center;
       padding-top: 60px;
       color: #333;
@@ -60,30 +64,11 @@
     }
   }
   .sns_icon{
+    width: 100%;
+    background: #f6f6f6;
     height: 160px;
-    padding: 0;
-    position: relative;
-    a{
-      +a{
-        left:123px;
-        +a{
-          left: 172px;
-          +a{
-             top: 85px;
-             left: 99px;
-             +a{
-               left: 147px;
-             }
-          }
-        }
-      }
-      padding: 0;
-      margin: 0;
-      position: absolute;
-      top: 45px;
-      left: 75px;
-    }
-  }
+    padding: 0;  
+ }
 }
 .more{
   a{
@@ -96,5 +81,26 @@
     text-align: center;
     line-height: 30px;
     margin: 0 auto;
+  }
+}
+@media (max-width:1024px){
+  .sns_box li{width: 33.33%;}
+}
+@media (max-width:860px){
+.sns_box li{
+  img{
+    width: 100%;
+  }
+  text-align: center;
+  width: 50%;
+}
+}
+@media (max-width:480px) {
+  .sns_wrap h2{
+    text-align: center;
+    padding-right: 0;
+  }
+  .sns_box li{
+    width: 100%;
   }
 }
