--- a/src/sass/findstore.scss
+++ b/src/sass/findstore.scss
@@ -43,18 +43,18 @@
     font-size: 16px;
   }
   select{
-    width: 198px;
+    width: 15.625%;
     height: 34px;
     border: 1px solid #ccc;
     color: #767676;
     margin-left: 10px;
     margin-right: 30px;
-    background:#fff url(../images/findstore/findstore_sel_icon.png) 98% 50% no-repeat;
+    background: #fff;
     vertical-align: middle;
   }
   input{
     vertical-align: middle;
-    width:588px;
+    width:46.09%;
     height:34px;
     border: 1px solid #ccc;
     margin-left: 10px;
@@ -111,12 +111,12 @@
           color: #0c0c0c;
           font-size: 20px;
           padding-top: 30px;
-          padding-right: 65px;       
+          padding-right: 65px;
         }
       }
     }
-    float: left;
-    width: 331px;
+    float: right;
+    width: 25.78%;
     max-height: 600px;
     overflow: hidden;
     overflow-y: scroll;
@@ -133,4 +133,55 @@
       background: url(../images/findstore/findstore_r_titback.png) 0 0 no-repeat;
     }
   }
+}
+#daumRoughmapContainer1483950425777{
+  width: 65.62%!important;
+  float: left;
+}
+@media (max-width:1024px) {
+.findstore_wrap{
+  margin-top: 40px;
+}
+.findstore_wrap h2{
+margin-bottom: 30px;
+}
+#daumRoughmapContainer1483950425777{
+  width: 100%!important;
+  float: left;
+}
+.map .map_nav{
+  width: 100%;
+  margin-top: 50px;
+  h3{
+    width: 100%;
+    background-size: cover;
+  }
+}
+}
+@media (max-width:860px) {
+.find_select select{
+  width: 100%;
+  margin: 0;
+  display: block;
+}
+.find_select input{
+  width: 80%;
+  margin: 0;
+}
+.find_select button{
+  width: 20%;
+}
+.find_select label{
+  display: none;
+}
+.find_select{
+  line-height: 40px;
+  height: 73px;
+}
+}
+@media (max-width:480px) {
+.findstore_wrap h2{
+  text-align: center;
+  padding: 0;
+}
 }
