--- a/src/sass/login.scss
+++ b/src/sass/login.scss
@@ -63,7 +63,7 @@
       right: 0;
       width: 150px;
       height: 83px;
-      background: #3b322b;
+      background: #514841;
       color: #fff;
       font-size: 16px;
       line-height:83px;
@@ -114,7 +114,7 @@
     text-align: center;
     line-height: 25px;
     font-weight: bold;
-    background: #3b322b;
+    background: #514841;
   }
   width: 538px;
   height: 96px;
@@ -131,5 +131,68 @@
     padding-left: 30px;
     color: #4e4e4e;
     font-size: 15px;
+  }
+}
+
+@media (max-width:860px) {
+  .login_tit+p{
+    font-size: 14px;
+    padding: 0 10px 30px;
+  }
+.login_box{
+  width: 100%;
+  padding: 0 20px;
+}
+.login_box .box1{
+  width: inherit;
+  position: inherit;
+}
+.login_box .box1 input{
+  width: 100%;
+  position: inherit;
+  margin-top: 15px;
+}
+.login_box .box1 button{
+  position: inherit;
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  margin: 15px 0;
+}
+.login_box .box2{
+  position: inherit;
+}
+.login_box .box2 a{
+  float: right;
+  line-height: 22px;
+}
+.login_box .box2 input[type="checkbox"]+label{
+  margin-right: 0;
+}
+.login_box+div{
+  width: 90%;
+  height: inherit;
+}
+.login_box+div a{
+  position: inherit;
+  width: 100%;
+  margin: 0 auto;
+  right: inherit;
+}
+}
+@media (max-width:480px) {
+  .login_wrap h2{
+    text-align: center;
+    padding: 0;
+    margin-bottom: 30px;
+  }
+  .login_box .box2 a{
+    font-size: 12px;
+  }
+  .login_box+div p{
+    padding: 20px;
+    +p{
+      padding: 0 20px;
+    }
   }
 }
